--- a/notebooks/streaming_data_ingestion.ipynb
+++ b/notebooks/streaming_data_ingestion.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "topic_name = 'your_topic_name'\n",
+    "topic_name = 'eth_txs_topic'\n",
     "\n",
     "with open('./ethereum_txs.csv', mode='r') as file:\n",
     "    reader = csv.DictReader(file)\n",
